[tool.poetry]
name = "test-work-task"
version = "0.1.0"
description = ""
authors = ["Dmitry <svobodiannikov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
